From eba5016 (parabolic-cylinder):
=================================

In prisim/interferometry.py,

(*) In __init__() member function of class InterferometerArray, accept
input labels as a numpy array, and convert if it is a list to a numpy
recArray using datatype of antenna labels in attribute layout
(*) In member function duplicate_measurements() of class
InterferometerArray, do more rigorous type checking of baseline labels
to avoid bugs due to slight mismatch in datatypes, avoid type
promotion errors, and append without errors
(*) In member function save() of class InterferometerArray, determine
baseline label datatypes from antenna label datatypes instead of
finding max string length because the latter may be a smaller string
if some baselines have been skipped

From 01ca9c4 (parabolic-cylinder):
=================================

In prisim/interferometry.py,

(*) Remove some commented lines in member function observe() of class
InterferometerArray

In scripts/run_prisim.py,

(*) Pass whole skymodel instead of only a subset in call to observe()
member function of class InterferometerArray when the MPI chunking is
based on frequency

From 11698dd (parabolic-cylinder):
=================================

In prisim/interferometry.py,

(*) In function antenna_power(), generate sky model spectrum using
explicit call to 'pchip' interpolation method
(*) In member function observe() of class SkyModel, generate sky
model spectrum using explicit call to 'pchip' interpolation method

In scripts/run_prisim.py,

(*) Replace the use of 'fgparm' key with new key 'skyparm' which was
missed in the merge of master into parabolic-cylinder branch
(*) Move the creation of organized directory structure to an earlier
location in the script
(*) Include 'gsm2008' and 'gsm2016' in checks for accepted sky model
(*) Compute sky model and the sky locations only for the rank=0
process and broadcast it to other processes
(*) Always store sky model computed under rank=0